# open-field-tracker

./: CITATION.cff  LICENSE  PUBLISH_GUIDE.md  README.md  auto-release.sh
open-field-tracker/: README.md  publish.sh  pyproject.toml  requirements.txt
open-field-tracker/skill/: main.py
open-field-tracker/src/open_field_tracker/: heatmap.py  trajectory.py
skill/: README.md  skill.json
src/open_field_tracker/: __init__.py  utils.py
